--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
@@ -1,4 +1,5 @@
-﻿.div_left_box {
+﻿
+.div_left_box {
     width: 751px;
     height: 332px;
     display: inline-block;
@@ -9,8 +10,8 @@
 }
 
 .div_left_box_bottom {
-    width: 751px;
-    height: 320px;
+    width: 1000px;
+    height: 600px;
     display: inline-block;
     float: left;
     border: 1px solid #eeeeee;
@@ -88,19 +89,19 @@
     }
 
 .tr_left_box_bottom {
-    line-height: 40px;
+    line-height: 80px;
     width: 100%;
 }
 
 .td_left_box_bottom_left {
     font-size: 14px;
-    width: 140px;
+    width: 180px;
     text-align: right;
-    padding-right: 20px;
+    padding-right: 30px;
 }
 
 .span_left_box_bottom_right {
-    color: #0000cd;
+    color: #bc6ba6;
     font-size: 14px;
     display: inline-block;
     float: left;
@@ -108,7 +109,7 @@
 }
 
     .span_left_box_bottom_right:hover {
-        color: #fd7600;
+        text-decoration:underline;
     }
 
 .em_left_box_bottom_right {
@@ -117,7 +118,7 @@
     display: inline-block;
     float: left;
     background-color: #ccc;
-    margin-top: 13px;
+    margin-top: 35px;
     margin-left: 10px;
     margin-right: 10px;
 }
