--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_LXKF.css
@@ -150,7 +150,7 @@
 }
 
     .span_ckxxbh:hover {
-        color: #ff6a00;
+        color: #bc6ba6;
     }
 
 .textarea_mswt {
@@ -191,7 +191,7 @@
 }
 
     .span_wtjj_inner:hover {
-        color: #ff6a00;
+        color: #bc6ba6;
     }
 
 .div_qtxxmy_inner {
@@ -213,7 +213,7 @@
 
 .span_second_lx {
     font-size: 14px;
-    color: #ff6a00;
+    color: #bc6ba6;
 }
 
 .span_href {
