--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_WZJY.css
@@ -119,7 +119,7 @@
 }
 
     .span_ckxxbh:hover {
-        color: #ff6a00;
+        color: #bc6ba6;
     }
 
 .textarea_mswt {
@@ -161,7 +161,7 @@
 }
 
     .span_wtjj_inner:hover {
-        color: #ff6a00;
+        color: #bc6ba6;
     }
 
 .div_qtxxmy_inner {
