--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -109,7 +109,7 @@
 
 
 .span_xzdz {color: #ad5b97;cursor: pointer;}
-.span_xzdz:hover {color: #ff6a00;}
+.span_xzdz:hover {color: #bc6ba6;}
 
 .span_xzdz_img {background-image: url(../images/expand_blue.png);background-repeat: no-repeat;vertical-align: middle;width: 16px;height: 16px;display: inline-block;cursor: pointer;}
 
