--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDSC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDXX/WDSC.css
@@ -18,7 +18,7 @@
 
 .span_info_middle {width:260px;height:30px;display:inline-block;overflow:hidden;}
 
-.span_info_right {width:120px;height:30px;display:inline-block;overflow:hidden;}
+.span_info_right {width:120px;height:30px;display:inline-block;overflow:hidden;text-align:right;padding-right:10px;}
 
 .div_no_info {width: 900px;height: 44px;padding: 10px 0 7px 10px;border-bottom: 1px solid #f1f1f1;border-top: 1px solid #f1f1f1;font-size: 12px;color: #000;text-align: center;}
 
@@ -42,7 +42,7 @@
 
 .span_new_info_body_middle_delete {cursor: pointer;padding-left: 12px;display: inline-block;color: #bc6ba6;}
 
-.div_main_info_bottom {background-color: #fff;height: 38px;padding-right:20px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
+.div_main_info_bottom {background-color: #fff;height: 38px;padding-right:10px;color: #333;font-size: 14px;font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;padding-left: 10px;padding-top: 8px;}
 
 .span_main_info_bottom {font-size: 12px;margin-left: 8px;margin-top: 2px;float: left;}
 
