--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -32,7 +32,7 @@
         </div>
         <div id="div_photo_info" class="div_photo_info">
             <div class="div_main_photo" id="div_main_photo">
-                @*<div class="div_main_photo_left">
+                <div class="div_main_photo_left">
                     <img id="img_main_photo" class="img_main_photo" />
                     <div class="div_main_photo_button">
                         <input class="button_main_photo" id="btnTBWXTX" type="button" value="同步微信头像" />
@@ -42,7 +42,7 @@
                         </div>
                         <input class="button_main_photo" id="btnXTSC" type="button" value="上传系统头像" />
                     </div>
-                </div>*@
+                </div>
                 <div id="div_main_photo_middle" class="div_main_photo_middle">
                     <img id="img_main_photo_middle" class="img_main_photo_middle" />
                     <span class="span_main_photo_middle" style="margin-top: 15px; margin-bottom: 10px;">圆形头像预览</span>
@@ -52,12 +52,12 @@
                 <div id="div_main_photo_middle_xt" class="div_main_photo_middle_xt">
                     <span class="span_main_photo_middle_xt">请选择喜欢的系统头像：</span>
                     <ul class="ul_main_photo_middle_xt">
-                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx1.jpg")" /></li>
-                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx2.jpg")" /></li>
-                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx3.jpg")" /></li>
-                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx4.jpg")" /></li>
-                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx5.jpg")" /></li>
-                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx6.jpg")" /></li>
+                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx1.png")" /></li>
+                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx2.png")" /></li>
+                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx3.png")" /></li>
+                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx4.png")" /></li>
+                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx5.png")" /></li>
+                        <li class="li_main_photo_middle_xt"><img class="img_main_photo_middle_xt" src="@Url.Content("~/Areas/Business/Css/images/HTGL/htgl_grzl_tx6.png")" /></li>
                     </ul>
                 </div>
             </div>
