--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/GRZL.cshtml
@@ -40,7 +40,7 @@
                             <div class="div_button_main_photo_child" id="div_button_main_photo_child">上传本地头像</div>
                             <input class="button_main_photo button_main_photo_upload" id="btnBDSC" type="file" unselectable="on" />
                         </div>
-                        <input class="button_main_photo" id="btnXTSC" type="button" value="上传系统头像" />
+                        <input class="button_main_photo" id="btnXTSC" type="button" value="选择系统头像" />
                     </div>
                 </div>
                 <div id="div_main_photo_middle" class="div_main_photo_middle">
