--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/HBSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/HBSJ.cshtml
@@ -1,12 +1,8 @@
 ﻿@{
-    ViewBag.Title = "HBSJ";
     Layout = "~/Areas/Business/Views/Shared/QT.cshtml";
 }
-
 <html>
 <head>
-
-
     <link href="@Url.Content("~/Areas/Business/Css/HTGL/WDZH/HBSJ.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTGL/WDZH/HBSJ.js")"></script>
 </head>
@@ -70,7 +66,7 @@
                     <td>
                         <div class="div_bdcg">
                             <div class="div_bdcg_tip">
-                                <img class="img_bdcg_tip"/>修改成功!
+                                <img class="img_bdcg_tip"/>绑定成功!
                             </div>
                         </div>
                     </td>
