--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/GRZL/YXYZ.cshtml
@@ -47,7 +47,7 @@
                 <tr>
                     <td>
                         <div class="div_csyj">
-                            请登录到您的邮箱<span id="span_yx" class="span_yx">1970402157@qq.com</span>中查收认证邮件，点击邮件中的“<span class="span_yxrz">邮箱认证</span>”按钮完成认证。
+                            请登录到您的邮箱<span id="span_yx" class="span_yx"></span>中查收认证邮件，点击邮件中的“<span class="span_yxrz">邮箱认证</span>”按钮完成认证。
                         </div>
                     </td>
                 </tr>
