--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/RZGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/RZGL.css
@@ -52,39 +52,39 @@
 }
 
 #img_content_info_rlrz {
-    background-image: url(../images/rlrz.png);
+    background-image: url(../../images/rlrz.png);
 }
 
 #img_content_info_zmsmrz {
-    background-image: url(../images/zmsmrz.png);
+    background-image: url(../../images/zmsmrz.png);
 }
 
 #img_content_info_scsfzrz {
-    background-image: url(../images/scsfzrz.png);
+    background-image: url(../../images/scsfzrz.png);
 }
 
 #img_content_info_grsfrz {
-    background-image: url(../images/grsfrz.png);
+    background-image: url(../../images/grsfrz.png);
 }
 
 #img_content_info_yyzzfrrz {
-    background-image: url(../images/yyzzfrrz.png);
+    background-image: url(../../images/yyzzfrrz.png);
 }
 
 #img_content_info_dgzhrz {
-    background-image: url(../images/dgzhrz.png);
+    background-image: url(../../images/dgzhrz.png);
 }
 
 #img_content_info_yyzzdsfrz {
-    background-image: url(../images/yyzzdsfrz.png);
+    background-image: url(../../images/yyzzdsfrz.png);
 }
 
 #img_content_info_yyzzptrz {
-    background-image: url(../images/yyzzptrz.png);
+    background-image: url(../../images/yyzzptrz.png);
 }
 
 #img_content_info_qtrz {
-    background-image: url(../images/qtrz.png);
+    background-image: url(../../images/qtrz.png);
 }
 
 .div_content_info_left_info {
