--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/ZHBD.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZH/ZHBD.css
@@ -20,12 +20,12 @@
 
 .div_content_info_right_info {display: block;float: right;width: 450px;}
 
-.span_content_info_right_hb {display: block;margin-top: 13px;cursor: pointer;margin-left: 700px;background-color: #5bd0de;width: 90px;height: 32px;border-radius: 4px;color: #ffffff;text-align: center;padding-top: 4px;position: absolute;}
+.span_content_info_right_hb {display: block;margin-top: 13px;cursor: pointer;margin-left: 700px;background-color: #bc6ba6;width: 90px;height: 32px;border-radius: 4px;color: #ffffff;text-align: center;padding-top: 4px;position: absolute;}
 
 .span_content_info_right_hb:hover {background-color: #ad5b97;}
 
 .span_content_info_right_ljbd {display: block;margin-top: 13px;cursor: pointer;margin-left: 700px;background-color: #bc6ba6;width: 90px;height: 32px;border-radius: 4px;color: #ffffff;text-align: center;padding-top: 4px;position: absolute;}
 
-.span_content_info_right_ljbd:hover {background-color: #d45406;}
+.span_content_info_right_ljbd:hover {background-color: #ad5b97;}
 
 .em_content_info {height: 1px;background-color: #e9e9e9;width: 870px;display: block;margin-top: 10px;}
